@@ -1,44 +1,38 @@
 package com.ustadmobile.lib.contentscrapers.ddl;
 
-import com.neovisionaries.i18n.LanguageCode;
 import com.ustadmobile.core.db.UmAppDatabase;
+import com.ustadmobile.core.db.dao.ContainerDao;
 import com.ustadmobile.core.db.dao.ContentCategoryDao;
 import com.ustadmobile.core.db.dao.ContentCategorySchemaDao;
-import com.ustadmobile.core.db.dao.ContentEntryContentEntryFileJoinDao;
 import com.ustadmobile.core.db.dao.ContentEntryDao;
-import com.ustadmobile.core.db.dao.ContentEntryFileDao;
-import com.ustadmobile.core.db.dao.ContentEntryFileStatusDao;
 import com.ustadmobile.core.db.dao.LanguageDao;
 import com.ustadmobile.lib.contentscrapers.ContentScraperUtil;
 import com.ustadmobile.lib.contentscrapers.ScraperConstants;
+import com.ustadmobile.lib.contentscrapers.UMLogUtil;
 import com.ustadmobile.lib.db.entities.ContentCategory;
 import com.ustadmobile.lib.db.entities.ContentCategorySchema;
 import com.ustadmobile.lib.db.entities.ContentEntry;
-import com.ustadmobile.lib.db.entities.ContentEntryContentEntryFileJoin;
-import com.ustadmobile.lib.db.entities.ContentEntryFile;
-import com.ustadmobile.lib.db.entities.ContentEntryFileStatus;
 import com.ustadmobile.lib.db.entities.Language;
 
-import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.lang.exception.ExceptionUtils;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
+import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLConnection;
 import java.nio.file.Files;
 import java.util.ArrayList;
 
 import static com.ustadmobile.lib.contentscrapers.ScraperConstants.EMPTY_STRING;
+import static com.ustadmobile.lib.contentscrapers.ScraperConstants.REQUEST_HEAD;
 import static com.ustadmobile.lib.contentscrapers.ddl.IndexDdlContent.DDL;
 import static com.ustadmobile.lib.db.entities.ContentEntry.LICENSE_TYPE_CC_BY;
 
@@ -56,52 +50,53 @@ public class DdlContentScraper {
     private final File destinationDirectory;
     private final URL url;
     private final ContentEntryDao contentEntryDao;
-    private final ContentEntryFileDao contentEntryFileDao;
-    private final ContentEntryContentEntryFileJoinDao contentEntryFileJoinDao;
-    private final ContentEntryFileStatusDao contentFileStatusDao;
     private final ContentCategorySchemaDao categorySchemaDao;
     private final ContentCategoryDao contentCategoryDao;
     private final LanguageDao languageDao;
+    private final ContainerDao containerDao;
+    private final UmAppDatabase db;
+    private final UmAppDatabase repository;
+    private final File containerDir;
+    private final Language language;
     private Document doc;
-    ArrayList<ContentEntry> contentEntries;
+    ContentEntry contentEntry;
 
-    public DdlContentScraper(String url, File destination) throws MalformedURLException {
+    public DdlContentScraper(String url, File destination, File containerDir, String lang) throws MalformedURLException {
         this.urlString = url;
         this.destinationDirectory = destination;
+        this.containerDir = containerDir;
         this.url = new URL(url);
         destinationDirectory.mkdirs();
-        UmAppDatabase db = UmAppDatabase.getInstance(null);
-        db.setMaster(true);
-        UmAppDatabase repository = db.getRepository("https://localhost", "");
+        db = UmAppDatabase.getInstance(null);
+        repository = db.getRepository("https://localhost", "");
         contentEntryDao = repository.getContentEntryDao();
-        contentEntryFileDao = repository.getContentEntryFileDao();
-        contentEntryFileJoinDao = repository.getContentEntryContentEntryFileJoinDao();
-        contentFileStatusDao = repository.getContentEntryFileStatusDao();
         categorySchemaDao = repository.getContentCategorySchemaDao();
         contentCategoryDao = repository.getContentCategoryDao();
         languageDao = repository.getLanguageDao();
+        containerDao = repository.getContainerDao();
+        language = ContentScraperUtil.insertOrUpdateLanguageByTwoCode(languageDao, lang);
     }
 
 
-    public static void main(String[] args) throws URISyntaxException {
-        if (args.length != 2) {
-            System.err.println("Usage: <ddl website url> <file destination>");
+    public static void main(String[] args) {
+        if (args.length < 3) {
+            System.err.println("Usage: <ddl website url> <file destination><container destination><lang en or fa or ps><optional log{trace, debug, info, warn, error, fatal}>");
             System.exit(1);
         }
-
-        System.out.println(args[0]);
-        System.out.println(args[1]);
+        UMLogUtil.setLevel(args.length == 4 ? args[3] : "");
+        UMLogUtil.logInfo(args[0]);
+        UMLogUtil.logInfo(args[1]);
         try {
-            new DdlContentScraper(args[0], new File(args[1])).scrapeContent();
+            new DdlContentScraper(args[0], new File(args[1]), new File(args[2]), args[3]).scrapeContent();
         } catch (IOException e) {
-            System.err.println("Exception running scrapeContent");
-            e.printStackTrace();
+            UMLogUtil.logError(ExceptionUtils.getStackTrace(e));
+            UMLogUtil.logError("Exception running scrapeContent ddl");
         }
 
     }
 
 
-    public void scrapeContent() throws IOException, URISyntaxException {
+    public void scrapeContent() throws IOException {
 
         File resourceFolder = new File(destinationDirectory, FilenameUtils.getBaseName(urlString));
         resourceFolder.mkdirs();
@@ -110,62 +105,89 @@ public class DdlContentScraper {
 
         Elements downloadList = doc.select("span.download-item a[href]");
 
-        contentEntries = new ArrayList<>();;
+        Element imgTag = doc.selectFirst("aside img");
+        String thumbnail = imgTag != null ? imgTag.attr("src") : EMPTY_STRING;
+
+        String description = doc.selectFirst("meta[name=description]").attr("content");
+        Element authorTag = doc.selectFirst("article.resource-view-details h3:contains(Author) ~ p");
+        Element farsiAuthorTag = doc.selectFirst("article.resource-view-details h3:contains(نویسنده) ~ p");
+        Element pashtoAuthorTag = doc.selectFirst("article.resource-view-details h3:contains(لیکونکی) ~ p");
+        String author = authorTag != null ? authorTag.text() :
+                farsiAuthorTag != null ? farsiAuthorTag.text() :
+                        pashtoAuthorTag != null ? pashtoAuthorTag.text() : EMPTY_STRING;
+        Element publisherTag = doc.selectFirst("article.resource-view-details a[href*=publisher]");
+        String publisher = publisherTag != null ? publisherTag.text() : EMPTY_STRING;
+
+
+        contentEntry = ContentScraperUtil.createOrUpdateContentEntry(urlString, doc.title(),
+                urlString, (publisher != null && !publisher.isEmpty() ? publisher : DDL),
+                LICENSE_TYPE_CC_BY, language.getLangUid(), null, description, true, author,
+                thumbnail, EMPTY_STRING, EMPTY_STRING, contentEntryDao);
+
         for (int downloadCount = 0; downloadCount < downloadList.size(); downloadCount++) {
 
             Element downloadItem = downloadList.get(downloadCount);
-
             String href = downloadItem.attr("href");
-            URL fileUrl = new URL(url, href);
-            // this was done to encode url that had empty spaces in the name or other illegal characters
-            URI uri = new URI(fileUrl.getProtocol(), fileUrl.getUserInfo(), fileUrl.getHost(), fileUrl.getPort(), fileUrl.getPath(), fileUrl.getQuery(), fileUrl.getRef());
+            File modifiedFile = getEtagOrModifiedFile(resourceFolder, FilenameUtils.getBaseName(FilenameUtils.getName(href)));
+            HttpURLConnection conn = null;
+            try {
+                URL fileUrl = new URL(url, href);
 
-            String thumbnail = doc.selectFirst("aside img").attr("src");
+                // this was done to encode url that had empty spaces in the name or other illegal characters
+                URI uri = new URI(fileUrl.getProtocol(), fileUrl.getUserInfo(), fileUrl.getHost(), fileUrl.getPort(), fileUrl.getPath(), fileUrl.getQuery(), fileUrl.getRef());
 
-            String lang = doc.select("html").attr("lang");
-            Language langEntity = ContentScraperUtil.insertOrUpdateLanguage(languageDao, LanguageCode.getByCode(lang).getName());
-            String description = doc.selectFirst("meta[name=description]").attr("content");
-            Element authorTag = doc.selectFirst("article.resource-view-details h3:contains(Author) ~ p");
-            String author = authorTag != null ? authorTag.text() : "";
-            Element publisherTag = doc.selectFirst("article.resource-view-details h3:contains(Publisher) ~ p");
-            String publisher = publisherTag != null ? publisherTag.text() : "";
+                conn = (HttpURLConnection) uri.toURL().openConnection();
+                conn.setRequestMethod(REQUEST_HEAD);
+                File resourceFile = new File(resourceFolder, FilenameUtils.getName(href));
+                String mimeType = Files.probeContentType(resourceFile.toPath());
 
+                boolean isUpdated = ContentScraperUtil.isFileModified(conn, resourceFolder, FilenameUtils.getName(href));
 
-            ContentEntry contentEntry = ContentScraperUtil.createOrUpdateContentEntry(uri.toString(), doc.title(),
-                    uri.toURL().getPath(), (publisher != null && !publisher.isEmpty() ? publisher : DDL),
-                    LICENSE_TYPE_CC_BY, langEntity.getLangUid(), null, description, true, author,
-                    thumbnail, EMPTY_STRING, EMPTY_STRING, contentEntryDao);
+                isUpdated = true;
 
+                if (!isUpdated) {
+                    continue;
+                }
 
-            URLConnection conn = uri.toURL().openConnection();
-            File resourceFile = new File(resourceFolder, FilenameUtils.getName(href));
-            String mimeType = Files.probeContentType(resourceFile.toPath());
+                FileUtils.copyURLToFile(uri.toURL(), resourceFile);
 
-            if (!ContentScraperUtil.isFileModified(conn, resourceFolder, FilenameUtils.getName(href))) {
+                ContentScraperUtil.insertContainer(containerDao, contentEntry, true, mimeType,
+                        resourceFile.lastModified(), resourceFile, db, repository, containerDir);
 
-                ContentScraperUtil.checkAndUpdateDatabaseIfFileDownloadedButNoDataFound(resourceFile, contentEntry, contentEntryFileDao,
-                        contentEntryFileJoinDao, contentFileStatusDao, mimeType, true);
-                continue;
+            } catch (Exception e) {
+                UMLogUtil.logError("Error downloading resource from url " + url + "/" + href);
+                if (modifiedFile != null) {
+                    ContentScraperUtil.deleteFile(modifiedFile);
+                }
+
+            } finally {
+                if (conn != null) {
+                    conn.disconnect();
+                }
             }
-
-            FileUtils.copyURLToFile(uri.toURL(), resourceFile);
-
-
-            ContentScraperUtil.insertContentEntryFile(resourceFile, contentEntryFileDao, contentFileStatusDao, contentEntry,
-                    ContentScraperUtil.getMd5(resourceFile), contentEntryFileJoinDao, true, mimeType);
-
-            contentEntries.add(contentEntry);
         }
     }
 
-    protected ArrayList<ContentEntry> getContentEntries() {
-        return contentEntries;
+    private File getEtagOrModifiedFile(File resourceFolder, String name) {
+        File eTag = new File(resourceFolder, name + ScraperConstants.ETAG_TXT);
+        if (ContentScraperUtil.fileHasContent(eTag)) {
+            return eTag;
+        }
+        File modified = new File(resourceFolder, name + ScraperConstants.LAST_MODIFIED_TXT);
+        if (ContentScraperUtil.fileHasContent(modified)) {
+            return modified;
+        }
+        return null;
+    }
+
+    protected ContentEntry getContentEntries() {
+        return contentEntry;
     }
 
     public ArrayList<ContentEntry> getParentSubjectAreas() {
 
         ArrayList<ContentEntry> subjectAreaList = new ArrayList<>();
-        Elements subjectContainer = doc.select("article.resource-view-details h3:contains(Subject Area) ~ p");
+        Elements subjectContainer = doc.select("article.resource-view-details a[href*=subject_area]");
 
         Elements subjectList = subjectContainer.select("a");
         for (Element subject : subjectList) {
@@ -173,12 +195,8 @@ public class DdlContentScraper {
             String title = subject.attr("title");
             String href = subject.attr("href");
 
-            String lang = doc.select("html").attr("lang");
-            Language langEntity = ContentScraperUtil.insertOrUpdateLanguage(languageDao, LanguageCode.getByCode(lang).getName());
-
-
             ContentEntry contentEntry = ContentScraperUtil.createOrUpdateContentEntry(href, title, href,
-                    DDL, LICENSE_TYPE_CC_BY, langEntity.getLangUid(), null,
+                    DDL, LICENSE_TYPE_CC_BY, language.getLangUid(), null,
                     EMPTY_STRING, false, EMPTY_STRING, EMPTY_STRING,
                     EMPTY_STRING, EMPTY_STRING, contentEntryDao);
 
@@ -194,7 +212,7 @@ public class DdlContentScraper {
 
 
         ArrayList<ContentCategory> categoryRelations = new ArrayList<>();
-        Elements subjectContainer = doc.select("article.resource-view-details h3:contains(Resource Level) ~ p");
+        Elements subjectContainer = doc.select("article.resource-view-details a[href*=level]");
 
         ContentCategorySchema ddlSchema = ContentScraperUtil.insertOrUpdateSchema(categorySchemaDao, "DDL Resource Level", "ddl/resource-level/");
 
